[package]
name = "yapv"
version = "0.2.0"
authors = ["kromych@github.com"]
edition = "2021"
description = "Yest Another Pipe Viewer"
homepage = "https://github.com/kromych/yapv"
repository = "https://github.com/kromych/yapv"
readme = "Readme.md"
keywords = ["educational", "multithreading", "file", "pipe"]
categories = ["command-line-utilities"]
license = "MIT or Apache-2.0"

[dependencies]
clap = { version = "4.1", features = ["derive"] }
crossbeam = "0.8"
crossterm = "0.26"
